--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,15 @@ asgiref==3.7.2
 cx-Oracle==8.3.0
 Django==3.2.20
 django-db-connection-pool==1.2.4
+django-ninja==0.22.2
 et-xmlfile==1.1.0
 greenlet==2.0.2
+gunicorn==21.0.1
 openpyxl==3.1.2
+packaging==23.2
+pydantic==1.10.13
 pytz==2023.3
 SQLAlchemy==2.0.20
 sqlparams==5.1.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
-# for production
-gunicorn==21.0.1
